--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,7 +5,7 @@
   "LOGIN": "Iniciar sesión",
   "SIGNUP": "Registrarse",
 
-  "TAB1_TITLE": "Items",
+  "TAB1_TITLE": "Inicio",
   "TAB2_TITLE": "Buscar",
   "TAB3_TITLE": "Ajustes",
 
