--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
   "SIGNUP": "Sign up",
 
   "TAB1_TITLE": "Home",
-  "TAB2_TITLE": "Search",
+  "TAB2_TITLE": "Sells",
   "TAB3_TITLE": "Settings",
 
   "MAP_TITLE": "Map",
