--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -6,7 +6,7 @@
   "SIGNUP": "Registrarse",
 
   "TAB1_TITLE": "Inicio",
-  "TAB2_TITLE": "Buscar",
+  "TAB2_TITLE": "Ventas",
   "TAB3_TITLE": "Ajustes",
 
   "MAP_TITLE": "Mapa",
