Stock page template

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,8 +9,9 @@
   "SIGNUP": "Sign up",
 
   "TAB1_TITLE": "Home",
-  "TAB2_TITLE": "Sells",
-  "TAB3_TITLE": "Settings",
+  "TAB2_TITLE": "Sales",
+  "TAB3_TITLE": "Stock",
+  "TAB4_TITLE": "Settings",  
 
   "MAP_TITLE": "Map",
 
