--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,7 +7,8 @@
 
   "TAB1_TITLE": "Inicio",
   "TAB2_TITLE": "Ventas",
-  "TAB3_TITLE": "Ajustes",
+  "TAB3_TITLE": "Inventario",
+  "TAB4_TITLE": "Ajustes",  
 
   "MAP_TITLE": "Mapa",
 
