--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -46,5 +46,5 @@
   "CARDS_TITLE": "Social",
 
   "SEARCH_TITLE": "Buscar",
-  "SEARCH_PLACEHOLDER": "Busca items por nombre, id..."
+  "SEARCH_PLACEHOLDER": "Buscar items por nombre, id..."
 }
